# Pinout

./: Cargo.toml  LICENSE  README.md  justfile
.helix/: config.toml
src/: config.rs  gpio.rs  main.rs  pinstate.rs  server.rs  ui.rs
