[package]
name = "Pinout"
version = "0.2.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["smol"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
smol = "2"
rppal = "0.18" # GPIO library for RPi
Wire = { git = "https://github.com/PisekPiskovec/Wire.git", branch = "master"}
